// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with a loading animation 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 kUukqp"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="false"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      >
        <img
          alt="loading"
          class="loader right"
          src="[object Object]"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Button renders a danger button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 jPJTyY"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a disabled button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 kUukqp"
        disabled=""
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a link button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 hCfXEO"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a primary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 kaJTBy"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a secondary button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 dUbAgv"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders a warning button 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 FOcIP"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;

exports[`Button renders without crashing 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 fNnIMx sc-hKgJUU jmuRuh"
    >
      <button
        class="StyledButtonKind-sc-1vhfpnt-0 dUbAgv"
        type="button"
      >
        Hi friends
      </button>
      <div
        aria-busy="true"
        aria-hidden="true"
        aria-live="assertive"
        aria-valuetext="Loading…"
        class="sc-dlfnuX cHvphe sc-eCstlR hsrHDx"
        role="progressbar"
      />
    </div>
  </div>
</div>
`;
